<resources>
    <string name="app_name">Supernova</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="play_queue">Play queue</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="edit_music">Edit music info</string>
    <string name="search">Search</string>
    <string name="songs">Songs</string>
    <string name="add_que">Add to play queue</string>
    <string name="add_playlist">Add to playlist</string>
    <string name="cancel">Cancel</string>
    <string name="create_playlist">Create new playlist</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="edit_album">Edit album info</string>
    <string name="name_playlist">Playlist name</string>
    <string name="ok">OK</string>
    <string name="play_next">Play next</string>
    <string name="play_prev">Play previous</string>
    <string name="play_pause">Play or pause</string>
    <string name="save">Save</string>
    <string name="search_hint">Search music</string>
    <string name="library">My Library</string>
    <string name="handle_view_desc">Icon that allows you to reorder songs in the current playback list.</string>
    <string name="album_artwork">Album artwork</string>
    <string name="album_information">Album information</string>
    <string name="set_album_artwork">Set album artwork</string>
    <string name="album_title">Album title</string>
    <string name="album_year">Album year</string>
    <string name="repeat_current_playlist">Repeat current playlist</string>
    <string name="playlist_results">Your playlist is below! You must save it in order to play the full list of songs.</string>
    <string name="more_settings">More settings</string>
    <string name="connection_lost">The connection to Spotify has been lost.</string>
    <string name="reconnect">Attempt to reconnect</string>
    <string name="change_image">Change image</string>
    <string name="delete_image">Delete image</string>
    <string name="welcome">Welcome</string>
    <string name="no_results">No results found</string>
    <string name="transition_image">transition_image</string>
    <string name="transition_title">transition_title</string>
    <string name="transition_subtitle">transition_subtitle</string>
    <string name="transition_subtitle2">transition_subtitle2</string>
    <string name="transition_back">transition_back</string>
    <string name="transition_play">transition_play</string>
    <string name="transition_forward">transition_forward</string>
    <string name="close_currently_playing">Close currently playing</string>
    <string name="spotify_SOTD_title">Song of the day inspiration</string>
    <string name="spotify_SOTD_yes">The song of the day will be based on your music taste</string>
    <string name="spotify_SOTD_no">The song of the day will be random</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="add_to_likes">Add to liked songs</string>
    <string name="remove_from_likes">Remove from liked Songs</string>
    <string name="playlist_generator">Playlist generator</string>
    <string name="playlist_generator_subtitle">Generate custom Spotify playlists based on your mood</string>
    <string name="mood">How do you feel?</string>
    <string name="activity">Choose an activity</string>
    <string name="relax">Relax</string>
    <string name="dancing">Dance</string>
    <string name="workout">Workout</string>
    <string name="study">Study</string>
    <string name="optional">Optional</string>
    <string name="show_genres">Select a genre</string>
    <string name="select_genres">Select up to three genres</string>
    <string name="submit">Submit</string>
    <string name="changes_applied">Your changes will be applied to the next round of animations.</string>
    <string name="theme_toggle">Night theme</string>
    <string name="view_queue">View the current play queue</string>
    <string name="skip_back">Skip back a track</string>
    <string name="shuffle_playlist">Shuffle current playlist</string>
    <string name="shuffle_tracks">Shuffle tracks</string>
    <string name="skip_ahead">Skip ahead a track</string>
    <string name="play_or_pause_current_track">Play or pause current track</string>
    <string name="options_menu">Options menu</string>
    <string name="remove_from_queue">Remove from play queue</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="done">Done</string>
    <string name="favourites">Favourites</string>
    <string name="recently_played">Recently played</string>
    <string name="most_played">Most played</string>
    <string name="song_day">Song of the day</string>
    <string name="remove_playlist">Remove from playlist</string>
    <string name="reorder_playlist">Reorder playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="animation_colour">Colour</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="pastel">Pastel</string>
    <string name="animation_images">Images</string>
    <string name="leaves">Leaves</string>
    <string name="animals">Animals</string>
    <string name="space">Space</string>
    <string name="flowers">Flowers</string>
    <string name="mandala">Mandala</string>
    <string name="instruments">Musical instruments</string>
    <string name="playback_animations">Playback animations</string>
    <string name="show_animations">Show animations</string>
    <string name="show_hide_animations">Show/hide animations</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="remove_favourites">Remove from favourites</string>
    <string name="animation_speed">Speed</string>
    <string name="slow">Slow</string>
    <string name="fast">Fast</string>
    <string name="normal">Normal</string>
    <string name="track">Track</string>
    <string name="error">An error has occurred. If the song file has been moved or deleted please wait for the library to refresh.</string>
    <string name="artist_name">Artist name</string>
    <string name="about">About</string>
    <string name="app_info">App information</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="acknowledgements_body">Warm thanks to the following people and organisations who\'s work has been used in this app:
    \n
    \nThe vinyl icon used as the app icon, for missing album and playlist artwork was made by Freepik from www.flaticon.com
    \n
    \nThe playback control icons (play, pause, skip forward and skip back) were made by Elias Bikbulatov from www.flaticon.com</string>
    <string name="developer">Developer</string>
    <string name="developer_body">This app was developed by Adam Hawke. Contact: hello@codersguidebook.com</string>
    <string name="song_of_the_day_will_be_displayed_here">Song of the day will appear here once your library is built</string>
    <string name="refresh_today_s_song_of_the_day">Refresh today\'s song of the day</string>
    <string name="animations">Animations</string>
    <string name="more">More</string>
    <string name="all_songs">All songs</string>
    <string name="use_custom_image">Use custom image</string>
    <string name="custom_image">Custom images</string>
    <string name="no_custom_image">Custom image could not be found</string>
    <string name="custom_image_not_found">Custom image cannot be found</string>
    <string name="manage_custom_images">Manage custom images</string>
    <string name="image_set">Image set!</string>
    <string name="edit_artist">Edit artist info</string>
    <string name="night">Night</string>
    <string name="artist_songs">View artist\'s songs</string>
    <string name="artist_information">Artist information</string>
    <string name="queue">Queue</string>
    <string name="restrictions_may_apply">Restrictions may apply - click here to learn more.</string>
    <string name="select_playlist">Select a playlist or create a new one</string>
    <string name="song_added_to_playlist">%1$s has been added to %2$s</string>
    <string name="songs_added_to_playlist">Your songs have been added to %1$s</string>
    <string name="empty_play_queue">The play queue is empty.</string>
    <string name="play_queue_shuffled">Play queue shuffled</string>
    <string name="play_queue_unshuffled">Play queue unshuffled</string>
    <string name="no_songs_found">No songs were found for %1$s</string>
    <string name="storage_permission_needed">Storage access is required to load your music library</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="removed_from_favourites">Removed from favourites</string>
    <string name="item_added_play_queue">%1$s has been added to the play queue</string>
    <string name="songs_added_play_queue">Your songs have been added to the play queue</string>
    <string name="repeat_mode_none">Repeat mode off</string>
    <string name="repeat_mode_all">Repeat the play queue</string>
    <string name="repeat_mode_one">Repeat the current song</string>
    <string name="item_saved">%1$s saved</string>
    <string name="playlist_already_exists">A playlist with that name already exists</string>
    <string name="playlist_name_cannot_be_empty">The playlist name field cannot be empty</string>
    <string name="playlist_contains_zero_songs">There are no songs in this playlist</string>
    <string name="playlist_updated">Playlist updated!</string>
    <string name="artist_name_cannot_be_empty">The artist name field cannot be empty</string>
    <string name="artist_name_not_changed">The artist name has not been changed</string>
    <string name="artist_updated">Artist updated!</string>
    <string name="account_type">Spotify account type: %s</string>
    <string name="restrictions_body">Some Spotify account types restrict your access to certain features. For example, free/open account users may notice they cannot play specific songs on request, queue songs, fast forward through tracks, skip back to previous tracks etc.. Users may also have to listen to adverts between songs.
    \n
    \nPlease be aware these restrictions can also interfere with the playlists that Supernova generates (e.g. playlists based on mood). While Supernova can prepare a list of suitable songs, if your account does not permit the playback of songs on command then you may hear different music instead.
    \n
    \nPremium account users will not experience any restrictions. You can manage your Spotify account through Spotify\'s website and app.</string>
    <string name="spotify_not_installed">It seems Spotify is not installed on this device!
        \n
        \nDownload Spotify from the app store and create a Spotify account to enjoy more features. For example, through your Spotify account, Supernova can play songs with animations over the album artwork, create playlists based on your mood, help you discover new music and more!</string>
    <string name="app_preferences">App preferences</string>
    <string name="launch_preference">Launch app in Spotify mode?</string>
    <string name="launch_preference_invitation">How would you like the app to launch?
    \n
    \nYou can change your mind whenever you like in your Settings.</string>
    <string name="spotify_mode">Spotify mode</string>
    <string name="normal_mode">Normal mode</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="save_play_queue">Save play queue as playlist</string>
    <string name="search_results">Search results</string>
    <string name="disc">Disc</string>
    <string name="check_fields_not_empty">Check none of the fields are empty</string>
    <string name="edit_playlist">Edit Playlist</string>
</resources>