<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single"
        android:orderInCategory="1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_queue"
            android:icon="@drawable/ic_nav_playing"
            android:title="@string/play_queue" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_nav_playlists"
            android:title="@string/playlists" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_nav_artists"
            android:title="@string/artists" />
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_nav_albums"
            android:title="@string/albums" />
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_nav_songs"
            android:title="@string/songs" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group2"
        android:orderInCategory="2">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/action_settings" />
    </group>
</menu>
