<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <ProgressBar
        android:id="@+id/songProgressBar"
        android:layout_above="@id/songInfo"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_gravity="center"
        style="?android:attr/progressBarStyleHorizontal" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/songInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/artwork"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/set_album_artwork"
            android:transitionName="@string/transition_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/artwork"
            app:layout_constraintEnd_toStartOf="@id/btnBackward" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="@string/transition_title"
                android:layout_marginBottom="2dp"
                android:singleLine="true"
                android:textSize="16sp"
                android:textColor="?attr/colorOnSurface" />

            <TextView
                android:id="@+id/artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="@string/transition_subtitle"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/onSurface60" />

            <TextView
                android:id="@+id/album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="@string/transition_subtitle2"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/onSurface60" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnBackward"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_back"
            android:transitionName="@string/transition_back"
            android:contentDescription="@string/skip_back"
            app:layout_constraintEnd_toStartOf="@id/btnPlay"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.Custom.Button" />

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_play"
            android:transitionName="@string/transition_play"
            android:contentDescription="@string/play_or_pause_current_track"
            app:layout_constraintEnd_toStartOf="@id/btnForward"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.Custom.Button" />

        <ImageButton
            android:id="@+id/btnForward"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="6dp"
            android:src="@drawable/ic_next"
            android:transitionName="@string/transition_forward"
            android:contentDescription="@string/skip_ahead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.Custom.Button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>