<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:checkedChip="@id/trackChip"
        app:singleLine="true"
        app:singleSelection="true"
        app:selectionRequired="true"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.chip.Chip
            android:id="@+id/trackChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/albumChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/artistChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/artists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.chip.Chip
            android:id="@+id/playlistChip"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:text="@string/playlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/noResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_results"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="6dp"
        android:contentDescription="@string/search_results"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>