<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    card_view:cardElevation="2dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/createPlaylistTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/create_playlist"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addPlaylistCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/createPlaylistTitle"
            android:layout_marginBottom="16dp"
            android:maxLength="30"
            android:hint="@string/name_playlist"
            android:textSize="16sp"
            android:textColor="@color/onSurface60"
            android:inputType="text"
            android:importantForAutofill="no" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addPlaylistCreate"
            android:gravity="end">

            <Button
                android:id="@+id/btnCreatePlaylistCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btnCreatePlaylistOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/ok" />
        </TableRow>
    </RelativeLayout>
</androidx.cardview.widget.CardView>