<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    tools:context=".ui.about.AboutFragment">

    <TextView
        android:id="@+id/acknowledgements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:text="@string/acknowledgements"
        android:textSize="16sp"
        android:textColor="@color/accent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/acknowledgements_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:text="@string/acknowledgements_body"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/acknowledgements"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        android:text="@string/developer"
        android:textSize="16sp"
        android:textColor="@color/accent"
        app:layout_constraintTop_toBottomOf="@id/acknowledgements_body"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/developer_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:text="@string/developer_body"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/developer"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>